tests/cli_diagnostics/run_python_ffi_runner_error.stderr.golden
tests/fixtures/run_python_ffi.curlee:2:12: error: forced runner error
  |
  |   unsafe { python_ffi.call(); }
  |            ^^^^^^^^^^^^^^^^^
